Task Manager Completed

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,11 @@
 {
     "cSpell.words": [
-        "halign"
+        "boxlayout",
+        "halign",
+        "incompleted",
+        "kivy",
+        "kivymd",
+        "taskid",
+        "varcahr"
     ]
 }
